[package]
name = "abstract-ws-web"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
web-sys = { version = "0.3.39", features = ["WebSocket", "MessageEvent"] }
abstract-ws = { git = "https://github.com/noocene/abstract-ws" }
futures = { version = "0.3.5" }
void = "1.0.2"
wasm-bindgen = "0.2.62"
js-sys = "0.3.39"
